# helix

./: Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/backend/src/: clear.rs  executor.rs  lib.rs  vm.rs
crates/bgw/: Cargo.toml
crates/bgw/src/: backend.rs  field.rs  ir.rs  lib.rs  lowering.rs  net_backend.rs  ops.rs  shamir.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: ast.rs  codegen.rs  display.rs  grammar.pest  lib.rs  parser.rs  type_checker.rs
crates/garbledc/: Cargo.toml
crates/garbledc/src/: backend.rs  circuit.rs  gate.rs  lib.rs  ot.rs
crates/garbledc/src/opcodes/: adder.rs  mod.rs
crates/garbledc/tests/: integration.rs
crates/ir/: Cargo.toml
crates/ir/src/: hir.rs  hir_display.rs  lib.rs  lir.rs  lir_display.rs  lowering.rs
crates/net/: Cargo.toml
crates/net/src/: channel.rs  layer.rs  lib.rs  network.rs  party.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: clear.rs  compiler.rs  executor.rs  lib.rs  runner.rs  vm.rs
formal/: helix_bgw.spthy  helix_bgw_proven.spthy
tests/: integration_test.rs
tests/samples/: add.ir  add.mpc  add.vm.json  arithmetic.mpc  array_sum.mpc  comparison.mpc  conditional.mpc  dot_product.mpc  func_call_test.mpc  loop.mpc  millionaire.mpc  multiply.mpc  multiply.vm.json  struct.mpc  struct_func_test.mpc  struct_test.mpc
