[workspace]
members = [
    "crates/common",
    "crates/ir",
    "crates/frontend",
    "crates/backend",
    "crates/crypto"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
